--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Git Immersion - Mis à votre disposition par EdgeCase</title>
+    <title>Git Immersion - Mis à votre disposition par EdgeCase - Traduction Thomas Gratier</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" media="screen" href="reset.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen" href="screen.css">
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <script type="text/javascript">
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-1142510-7']);
+      _gaq.push(['_setAccount', 'UA-31474857-1']);
       _gaq.push(['_trackPageview']);
       (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -22,141 +20,81 @@
       })();
     </script>
     <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="html5.js"></script>
     <script type="text/javascript" src="jquery.hotkeys.js"></script>
     <script type="text/javascript" src="UI.js"></script>
   </head>
-  <body>
-    <header id="header">
-      <a href="index.html" id="home_link">Git Immersion</a>
-      <a href="http://edgecase.com" target="_blank" id="edgecase_link">Mis à votre disposition par EdgeCase</a>
-      <nav>
-        <ul>
-          <li class="arrow next">
-            <a href="lab_01.html#main_content">Débuter</a>
-          </li>
-          <li class="index_button"><a href="#">Index</a></li>
-        </ul>
-      </nav>
+
+  <body id="index_body">
+    <header id="index_header">
+      <a href="index.html">Git Immersion</a>
     </header>
-    <div id="homepage">
-      <div id="border_left">
-        <div id="intro">
-          <p>Git est un système très puissant et très élaboré pour la gestion de version de fichiers. Obtenir une compréhension de ces fonctionnalités ouvre aux développeurs une approche nouvelle et libératrice pour gérer son code source. Le plus sûr moyen de de maîtriser Git est de s'immerger dans ses utilitaires et ses différentes fonctions, pour se faire votre première expérience.</p>
-          <p><em>Git Immersion est un tour guidé qui permet de voir les fondamentaux de Git, inspiré par la promesse que savoir une chose c'est la faire.</em></p>
+
+    <div id="attention">
+      <div class="wrapper">
+        <p><em>Git Immersion est un tour guidé qui permet de voir les fondamentaux de Git, inspiré par la promesse que savoir une chose c'est l'expérimenter.</em></p>
+        <p>Git est un système très puissant et très élaboré pour la gestion de version de fichiers. Obtenir une compréhension de ses fonctionnalités ouvre aux développeurs une approche nouvelle et libératrice pour gérer son code source. Le plus sûr moyen de de maîtriser Git est de s'immerger dans ses utilitaires et ses différentes fonctions, pour expérimenter sa prise en main.</p>
+        <div id="attention_links">
+          <h1><span>Installer Git</span></h1>
+          <a href="http://code.google.com/p/git-osx-installer" target="_blank">Mac</a>
+          <a href="http://code.google.com/p/msysgit" target="_blank">Windows</a>
+
+          <br><br>
+
+          <h1><span>Clients graphiques</span></h1>
+          <a href="http://gitx.frim.nl" target="_blank">Mac</a>
+          <a href="http://code.google.com/p/tortoisegit" target="_blank">Windows</a>
         </div>
-        <div id="install">
-          <h1>Installer Git:</h1>
-          <div class="beep">
-            <h2>Mac</h2>
-            <p><a href="http://code.google.com/p/git-osx-installer" target="_blank">Git pour Mac OS X</a></p>
-          </div>
-          <div class="beep">
-            <h2>Windows</h2>
-            <p><a href="http://code.google.com/p/msysgit" target="_blank">msysgit</a></p>
-          </div>
-          <div class="clear"></div>
-          <div id="gui_clients">
-            <h1>Interfaces graphiques:</h1>
-            <div class="beep">
-              <h2>Mac</h2>
-              <p><a href="http://gitx.frim.nl/" target="_blank">GitX</a></p>
-            </div>
-            <div class="beep">
-              <h2>Windows</h2>
-              <p><a href="http://code.google.com/p/tortoisegit/" target="_blank">TortoiseGit</a></p>
-            </div>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <div id="other_resources">
-          <h1>Autres ressources (en anglais)</h1>
-          <p>
-            <ul>
-              <li><a href="http://git-scm.com" target="_blank">http://git-scm.com</a></li>
-              <li><a href="http://github.com" target="_blank">http://github.com</a></li>
-              <li><a href="http://book.git-scm.com" target="_blank">http://book.git-scm.com</a></li>
-              <li><br/><a href="http://pragprog.com/screencasts/v-jwsceasy/source-control-made-easy" target="_blank"><img src="SourceControlMadeEasy.jpg"></a></li>
-            </ul>
-          </p>
-        </div>
-        <div id="license">
-          <h1>LICENSE <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"/></a></h1>
-          <p>
-            GitImmersion est mise à disposition sous une Licence
-            <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative
-              Commons, Attribution-NonCommercial-ShareAlike</a>.
-          </p>
-        </div>
-      </div> <!-- /#border_left -->
-      <div id="brought_to_you_by">
-        <h1>Brought to you by:</h1>
-        <a href="http://edgecase.com" target="_blank">Edgecase</a>
+
+        <a href="lab_01.html" id="start_immersion">Démarrer Git Immersion</a>
       </div>
     </div>
-    <div id="index">
-  <h1>Table des matières</h1>
-  <div id="show_bookmarks"></div>
-  <div id="no_bookmarks"></div>
-  <ul>
-    <li data-lab-id="0"><a href="index.html"><span>&nbsp;</span>Couverture de page d'accueil</a></li>
-          <li data-lab-id="1"><a href="lab_01.html"><span>1:</span> Configuration</a></li>
-          <li data-lab-id="2"><a href="lab_02.html"><span>2:</span> Configuration supplémentaire</a></li>
-          <li data-lab-id="3"><a href="lab_03.html"><span>3:</span> Créer un projet</a></li>
-          <li data-lab-id="4"><a href="lab_04.html"><span>4:</span> Vérifier le status</a></li>
-          <li data-lab-id="5"><a href="lab_05.html"><span>5:</span> Effectuer des changements</a></li>
-          <li data-lab-id="6"><a href="lab_06.html"><span>6:</span> Déclarer les changements</a></li>
-          <li data-lab-id="7"><a href="lab_07.html"><span>7:</span> Déclarer et commiter</a></li>
-          <li data-lab-id="8"><a href="lab_08.html"><span>8:</span> Commiter les changements</a></li>
-          <li data-lab-id="9"><a href="lab_09.html"><span>9:</span> Changements, pas fichiers</a></li>
-          <li data-lab-id="10"><a href="lab_10.html"><span>10:</span> Historique</a></li>
-          <li data-lab-id="11"><a href="lab_11.html"><span>11:</span> Alias</a></li>
-          <li data-lab-id="12"><a href="lab_12.html"><span>12:</span> Obtenir de vieille versions</a></li>
-          <li data-lab-id="13"><a href="lab_13.html"><span>13:</span> Tagger des versions</a></li>
-          <li data-lab-id="14"><a href="lab_14.html"><span>14:</span> Annuler les changements locaux (avant les déclarations)</a></li>
-          <li data-lab-id="15"><a href="lab_15.html"><span>15:</span> Annuler les déclarations de fichiers changés (avant de commiter)</a></li>
-          <li data-lab-id="16"><a href="lab_16.html"><span>16:</span> Annuler les changements déjà commités</a></li>
-          <li data-lab-id="17"><a href="lab_17.html"><span>17:</span> Enlever des commits d'une branche</a></li>
-          <li data-lab-id="18"><a href="lab_18.html"><span>18:</span> Remove the oops tag</a></li>
-          <li data-lab-id="19"><a href="lab_19.html"><span>19:</span> Amending Commits</a></li>
-          <li data-lab-id="20"><a href="lab_20.html"><span>20:</span> Moving Files</a></li>
-          <li data-lab-id="21"><a href="lab_21.html"><span>21:</span> More Structure</a></li>
-          <li data-lab-id="22"><a href="lab_22.html"><span>22:</span> Git Internals: The .git directory</a></li>
-          <li data-lab-id="23"><a href="lab_23.html"><span>23:</span> Git Internals: Working directly with Git Objects</a></li>
-          <li data-lab-id="24"><a href="lab_24.html"><span>24:</span> Creating a Branch</a></li>
-          <li data-lab-id="25"><a href="lab_25.html"><span>25:</span> Navigating Branches</a></li>
-          <li data-lab-id="26"><a href="lab_26.html"><span>26:</span> Changes in Master</a></li>
-          <li data-lab-id="27"><a href="lab_27.html"><span>27:</span> Viewing Diverging Branches</a></li>
-          <li data-lab-id="28"><a href="lab_28.html"><span>28:</span> Merging</a></li>
-          <li data-lab-id="29"><a href="lab_29.html"><span>29:</span> Creating a Conflict</a></li>
-          <li data-lab-id="30"><a href="lab_30.html"><span>30:</span> Resolving Conflicts</a></li>
-          <li data-lab-id="31"><a href="lab_31.html"><span>31:</span> Rebasing VS Merging</a></li>
-          <li data-lab-id="32"><a href="lab_32.html"><span>32:</span> Resetting the Greet Branch</a></li>
-          <li data-lab-id="33"><a href="lab_33.html"><span>33:</span> Resetting the Master Branch</a></li>
-          <li data-lab-id="34"><a href="lab_34.html"><span>34:</span> Rebasing</a></li>
-          <li data-lab-id="35"><a href="lab_35.html"><span>35:</span> Merging Back to Master</a></li>
-          <li data-lab-id="36"><a href="lab_36.html"><span>36:</span> Multiple Repositories</a></li>
-          <li data-lab-id="37"><a href="lab_37.html"><span>37:</span> Cloning Repositories</a></li>
-          <li data-lab-id="38"><a href="lab_38.html"><span>38:</span> Review the Cloned Repository</a></li>
-          <li data-lab-id="39"><a href="lab_39.html"><span>39:</span> What is Origin?</a></li>
-          <li data-lab-id="40"><a href="lab_40.html"><span>40:</span> Remote Branches</a></li>
-          <li data-lab-id="41"><a href="lab_41.html"><span>41:</span> Change the Original Repository</a></li>
-          <li data-lab-id="42"><a href="lab_42.html"><span>42:</span> Fetching Changes</a></li>
-          <li data-lab-id="43"><a href="lab_43.html"><span>43:</span> Merging Pulled Changes</a></li>
-          <li data-lab-id="44"><a href="lab_44.html"><span>44:</span> Pulling Changes</a></li>
-          <li data-lab-id="45"><a href="lab_45.html"><span>45:</span> Adding a Tracking Branch</a></li>
-          <li data-lab-id="46"><a href="lab_46.html"><span>46:</span> Bare Repositories</a></li>
-          <li data-lab-id="47"><a href="lab_47.html"><span>47:</span> Adding a Remote Repository</a></li>
-          <li data-lab-id="48"><a href="lab_48.html"><span>48:</span> Pushing a Change</a></li>
-          <li data-lab-id="49"><a href="lab_49.html"><span>49:</span> Récupérer les changements partagés</a></li>
-          <li data-lab-id="50"><a href="lab_50.html"><span>50:</span> Héberger vos dépôts Git</a></li>
-          <li data-lab-id="51"><a href="lab_51.html"><span>51:</span> Partager des dépôts</a></li>
-          <li data-lab-id="52"><a href="lab_52.html"><span>52:</span> Sujets avancés / futurs</a></li>
-          <li data-lab-id="53"><a href="lab_53.html"><span>53:</span> Merci</a></li>
-      </ul>
-</div>
 
+    <div class="wrapper">
+      <div id="private_training">
+        <h1>Nous fournissons une formation personnalisée</h1>
+        <p>
+          EdgeCase aide les organisations à accéder au potentiel des dernières technologies et méthodologies en offrant une offre structurée de formation dans des domaines tels que Git, Ruby, Ruby on Rails, et en développement Agile. Nous sommes spécialisé dans l'amélioration des pratiques de développement et restons en permanence à jour sur ces technologies en constante évolution. Laissez nous vous apporter cette expertise dans votre société.
+          <br/><span id="translator_notes">Note du traducteur: nous avons traduit qu'il était possible de bénéficier d'une prestation de formation pour respecter le travail de l'auteur original et de sa société mais celle-ci n'est pas valable dans les pays francophones </span>
+          <br><br>
+          <a href="http://edgecase.com/contact" target="_blank">Entrer en contact avec EdgeCase</a>
+          <span id="translator_contact"><a href="https://github.com/ThomasG77/git_immersion/" target="_blank">Améliorer la traduction en forkant le dépôt Github</a></span>
+        </p>
+      </div>
 
+      <div id="license_and_edgecase">
+        <div id="license">
+          <h1>Licence</h1>
+          <a href="http://creativecommons.org/licenses/by-nc-sa/3.0">
+            <img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png">
+            GitImmersion est sous licence Creative Commons avec Paternité - Pas d’Utilisation Commerciale - Partage des Conditions Initiales à l’Identique
+          </a>
+        </div>
+        <br><br>
+        <a id="brought_to_you_by" href="http://edgecase.com" target="_blank">
+          Nous accompagnons. Nous construisons. Nous enseignons.<br>
+          <img src="edgecase.png">
+        </a>
+      </div>
+
+      <div id="other_resources">
+        <h1>Autres ressources autour de Git (en français)</h1>
+        <ul>
+          <li><a href="http://git-scm.com/book/fr/" target="_blank">Livre Pro Git (S. Chacon)</a></li>
+          <li><a href="http://www.siteduzero.com/tutoriel-3-254198-gerez-vos-codes-source-avec-git.html" target="_blank">Site du zéro - Gérez vos codes source avec Git </a></li>
+          <li><a href="http://www.blog-nouvelles-technologies.fr/archives/13114/comprendre-github-fork-branch-track-squash-et-pull-request/" target="_blank">Comprendre GitHub</a></li>
+        </ul>
+        <br>
+        <h1>Autres ressources autour de Git (en anglais)</h1>
+        <ul>
+          <li><a href="http://git-scm.com" target="_blank">git-scm.com</a></li>
+          <li><a href="http://github.com" target="_blank">github.com</a></li>
+          <li><a href="http://book.git-scm.com" target="_blank">book.git-scm.com</a></li>
+          <li><a href="http://gitorious.org/" target="_blank">gitorious.org</a></li>
+          <li><br><br><a href="http://pragprog.com/screencasts/v-jwsceasy/source-control-made-easy" target="_blank"><img src="SourceControlMadeEasy.jpg"></a></li>
+        </ul>
+      </div>
+      <div class="clear"></div>
+    </div> <!-- /.wrapper -->
   </body>
 </html>
 
