--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-31474857-1']);
+      _gaq.push(['_setDomainName', 'gitimmersion.fr']);
       _gaq.push(['_trackPageview']);
       (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
