--- a/lab_29.html
+++ b/lab_29.html
@@ -12,6 +12,7 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
+   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -36,9 +37,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_30.html">Suivant</a>
-  
+
       <a id="arrow_previous" class="arrow" href="lab_28.html">Précédent</a>
-  
+
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -75,14 +76,14 @@ git commit -m "Rendre interactif"</pre>
 <pre class="sample">$ git hist --all
 * e59aeaa 2012-05-06 | Rendre interactif (HEAD, master) [Jim Weirich]
 | *   3ced745 2012-05-06 | Merge branch 'master' into saluer (saluer) [Jim Weirich]
-| |\  
-| |/  
-|/|   
+| |\
+| |/
+|/|
 * | 62d4c28 2012-05-06 | Ajout d'un LISEZMOI [Jim Weirich]
 | * 9c97fdd 2012-05-06 | Rakefile mis à jour [Jim Weirich]
 | * 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
 | * 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/  
+|/
 * b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
 * d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
 * 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
