--- a/lab_32.html
+++ b/lab_32.html
@@ -12,6 +12,7 @@
   <script type="text/javascript">
    var _gaq = _gaq || [];
    _gaq.push(['_setAccount', 'UA-31474857-1']);
+   _gaq.push(['_setDomainName', 'gitimmersion.fr']);
    _gaq.push(['_trackPageview']);
    (function() {
      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -36,9 +37,9 @@
     <a href="index.html" id="home_link">Git Immersion</a>
     <nav id="pager">
       <a id="arrow_next" class="arrow" href="lab_33.html">Suivant</a>
-  
+
       <a id="arrow_previous" class="arrow" href="lab_31.html">Précédent</a>
-  
+
   <a id="table_of_contents_link" href="#">Table des matières</a>
   <a id="bookmark_link"><span id="bookmark"></span>Mettre en favori cette partie</a>
   <a id="edgecase_link" href="http://edgecase.com" target="_blank">EdgeCase</a>
@@ -66,12 +67,12 @@ git hist</pre>
 Switched to branch 'saluer'
 $ git hist
 *   3ced745 2012-05-06 | Merge branch 'master' into saluer (HEAD, saluer) [Jim Weirich]
-|\  
+|\
 | * 62d4c28 2012-05-06 | Ajout d'un LISEZMOI [Jim Weirich]
 * | 9c97fdd 2012-05-06 | Rakefile mis à jour [Jim Weirich]
 * | 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
 * | 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/  
+|/
 * b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
 * d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
 * 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
@@ -98,7 +99,7 @@ HEAD is now at 9c97fdd Rakefile mis à jour
 | * 9c97fdd 2012-05-06 | Rakefile mis à jour (HEAD, saluer) [Jim Weirich]
 | * 5c2f6d0 2012-05-06 | bonjour utiliser Faireunsalut [Jim Weirich]
 | * 1aea98c 2012-05-06 | Ajout de la classe Faireunsalut [Jim Weirich]
-|/  
+|/
 * b33d944 2012-05-06 | Ajout d'un Rakefile [Jim Weirich]
 * d2d5251 2012-05-06 | Déplacement de bonjour.rb dans lib [Jim Weirich]
 * 65d4697 2012-05-06 | Add an author/email comment [Jim Weirich]
